--- a/app/web/cases/templates/cases/case_list_page_wonen.html
+++ b/app/web/cases/templates/cases/case_list_page_wonen.html
@@ -88,6 +88,6 @@
             {% endfor %}
         </tbody>
     </table>
-    {% include 'core/pagination.html' with object_list=object_list filter_params='' %}
+    {% include 'core/pagination.html' with object_list=object_list filter_params=filter_params %}
 </section>
 {% endblock %}
