added search for cases

--- a/app/web/cases/templates/cases/case_list_page.html
+++ b/app/web/cases/templates/cases/case_list_page.html
@@ -24,6 +24,13 @@
             </div>
         </div>
     </div>
+    <form method="get" class="u-margin-bottom-2x">
+        <div class="form-field">
+            <div class="help-text">Zoek in de velden Voornaam, Achternaam en E-mailadres.</div>
+            {{ form.search }}
+        </div>
+        <button type="submit">Filter</button>
+    </form>
 
     <p>{{ object_list.paginator.count }}{% if object_list.paginator.count == 1 %} resultaat{% else %} resultaten{% endif %}</p>
 
