--- a/app/web/cases/templates/cases/case_list_page_wonen.html
+++ b/app/web/cases/templates/cases/case_list_page_wonen.html
@@ -28,6 +28,13 @@
         </div>
         {% endif %}
     </div>
+    <form method="get" class="u-margin-bottom-2x">
+        <div class="form-field">
+            <div class="help-text">Zoek in de velden Voornaam, Achternaam en E-mailadres.</div>
+            {{ form.search }}
+        </div>
+        <button type="submit">Filter</button>
+    </form>
     
     <div class="tab-list-container">
         <ul class="u-list-style-none tab-list">
