--- a/app/web/cases/templates/cases/case_list_archive.html
+++ b/app/web/cases/templates/cases/case_list_archive.html
@@ -17,6 +17,14 @@
 <section class="section section--mijn-clienten">
     <h2>Archief</h2>
 
+    <form method="get" class="u-margin-bottom-2x">
+        <div class="form-field">
+            <div class="help-text">Zoek in de velden Voornaam, Achternaam en E-mailadres.</div>
+            {{ form.search }}
+        </div>
+        <button type="submit">Filter</button>
+    </form>
+
     <p>{{ object_list.paginator.count }}{% if object_list.paginator.count == 1 %} resultaat{% else %} resultaten{% endif %}</p>
 
 
