fixed searching for first and lastname

--- a/app/web/cases/templates/cases/case_list_archive.html
+++ b/app/web/cases/templates/cases/case_list_archive.html
@@ -19,7 +19,7 @@
 
     <form method="get" class="u-margin-bottom-2x">
         <div class="form-field">
-            <div class="help-text">Zoek in de velden Voornaam, Achternaam en E-mailadres.</div>
+            <div class="help-text">Zoek cliënten op Voornaam, Achternaam en/of E-mailadres.</div>
             {{ form.search }}
         </div>
         <button type="submit">Filter</button>
