--- a/app/web/cases/templates/cases/case_list_page_wonen.html
+++ b/app/web/cases/templates/cases/case_list_page_wonen.html
@@ -30,7 +30,7 @@
     </div>
     <form method="get" class="u-margin-bottom-2x">
         <div class="form-field">
-            <div class="help-text">Zoek in de velden Voornaam, Achternaam en E-mailadres.</div>
+            <div class="help-text">Zoek cliënten op Voornaam, Achternaam en/of E-mailadres.</div>
             {{ form.f }}
             {{ form.search }}
         </div>
