--- a/app/web/users/templates/users/user_list_page.html
+++ b/app/web/users/templates/users/user_list_page.html
@@ -29,7 +29,7 @@
             {{ form.filter }}
         </div>
         <div class="form-field">
-            <div class="help-text">Zoek in de velden Voornaam, Achternaam en E-mailadres.</div>
+            <div class="help-text">Zoek gebruikers op Voornaam, Achternaam en/of E-mailadres.</div>
             {{ form.search }}
         </div>
         <button type="submit" >Filter</button>
