--- a/app/web/cases/templates/cases/case_create_form.html
+++ b/app/web/cases/templates/cases/case_create_form.html
@@ -1,4 +1,5 @@
 {% extends 'base.html' %}
+{% load static %}
 
 {% block skiplinks %}
 {% if not request.GET.iframe_content %}
@@ -55,4 +56,9 @@
             {% endif %}
         </div>
     </form>
+{% endblock %}
+
+{% block js %}
+	{{ block.super }}
+	<script type="text/javascript" src="{% static "js/caseform.js" %}"></script>
 {% endblock %}
