--- a/app/web/core/templates/data.html
+++ b/app/web/core/templates/data.html
@@ -1,5 +1,5 @@
 {% extends 'base.html' %}
-{% load staticfiles auth_tags tz %}
+{% load static auth_tags tz %}
 
 {% block skiplinks %}{% endblock %}
 {% block breadcrumb %}{% endblock %}
