--- a/app/web/core/templates/user_meta.html
+++ b/app/web/core/templates/user_meta.html
@@ -1,5 +1,5 @@
 {% extends 'base.html' %}
-{% load staticfiles auth_tags %}
+{% load static auth_tags %}
 
 {% block skiplinks %}{% endblock %}
 {% block header %}{% endblock %}
