--- a/app/web/documents/templates/documents/snippets/upload.html
+++ b/app/web/documents/templates/documents/snippets/upload.html
@@ -1,4 +1,4 @@
-{% load staticfiles auth_tags %}
+{% load static auth_tags %}
 
 {% if request.user|is_redactie %}
     <li class="document document--add">
