--- a/app/web/feedback/templates/feedback/feedback.html
+++ b/app/web/feedback/templates/feedback/feedback.html
@@ -47,7 +47,7 @@
 
         <div class="form-field--textinput form-field form-field--empty">
             <label for="id_email">E-mailadres <small class="help-text">(Optioneel)</small>:</label>
-            <div class="help-text">Zodat we contact op kunnen nemen als we vragen hebben</div>
+            <div class="help-text">Zodat we contact op kunnen nemen als we vragen hebben.</div>
             {{ form.email }}
             {% if form.email.errors %}
                 <ol class="error-text">
@@ -58,7 +58,7 @@
             {% endif %}
         </div>
         <div class="form-field--textarea form-field form-field--empty">
-            <label for="id_feedback">Wat wil je ons laten weten <small class="help-text">(Verplicht)</small>:</label>
+            <label for="id_feedback">Wat wil je ons laten weten? <small class="help-text">(Verplicht)</small>:</label>
             {% if form.feedback.errors %}{% endif %}
             {{ form.feedback }}
             {% if form.feedback.errors %}
@@ -70,9 +70,22 @@
             {% endif %}
         </div>
 
+        <div class="form-field--textinput form-field form-field--empty">
+            <label for="id_captcha">Beveiligingscontrole <small class="help-text">(Verplicht)</small>:</label>
+            <div class="help-text">Om spam te voorkomen, vragen wij u de onderstaande code over te typen.</div>
+            {{ form.captcha }}
+            {% if form.captcha.errors %}
+                <ol class="error-text">
+                {% for error in form.captcha.errors %}
+                    <li><strong>{{ error|escape }}</strong></li>
+                {% endfor %}
+                </ol>
+            {% endif %}
+        </div>
+
         <div class="form-field form-field--buttons screen-only u-margin-top-3x">
+            <a data-handler="modal-close" href="#" class="button button--secondary u-margin-right">Annuleren</a>
             <input type="submit" value="Verstuur" class="button button--primary">
-            <a data-handler="modal-close" href="#" class="button button--secondary">Annuleren</a>
         </div>
     </form>
 
