--- a/app/static_src/sass/components/_pagination.scss
+++ b/app/static_src/sass/components/_pagination.scss
@@ -23,6 +23,11 @@
         color: $primary-white;
       }
 
+      span.pagination-ellipsis {
+        background-color: transparent;
+        color: $default-text-color;
+      }
+
       a {
         text-decoration: none;
         &:hover {
