--- a/app/web/core/templates/core/pagination.html
+++ b/app/web/core/templates/core/pagination.html
@@ -4,21 +4,55 @@
     <ul>
         {% if object_list.has_previous %}
             <li class="pagination-link--previous">
-                <a href="?page={{ object_list.previous_page_number }}{{ filter_params }}"><svg width="12" height="18"><use href="#chevron-left" xlink:href="#chevron-left" width="12" height="18"></use></svg>Vorige</a>
+                <a href="?page={{ object_list.previous_page_number }}{{ filter_params }}">
+                    <svg width="12" height="18">
+                        <use href="#chevron-left" xlink:href="#chevron-left" width="12" height="18"></use>
+                    </svg>
+                    Vorige
+                </a>
             </li>
         {% endif %}
-        {% for p in object_list.paginator.num_pages|range %}
-        <li>
-        {% if forloop.counter == object_list.number %}
-            <span>{{ forloop.counter }}</span>
-        {% else %}
-            <a href="?page={{ forloop.counter }}{{ filter_params }}">{{ forloop.counter }}</a>
+
+        {% if object_list.number > 3 %}
+            <li>
+                <a href="?page=1{{ filter_params }}">1</a>
+            </li>
+            {% if object_list.number > 4 %}
+                <li><span class="pagination-ellipsis">...</span></li>
+            {% endif %}
         {% endif %}
-        </li>
+
+        {% for p in object_list.paginator.page_range %}
+            {% if p >= object_list.number|add:"-2" and p <= object_list.number|add:"2" %}
+                <li>
+                    {% if p == object_list.number %}
+                        <span>{{ p }}</span>
+                    {% else %}
+                        <a href="?page={{ p }}{{ filter_params }}">{{ p }}</a>
+                    {% endif %}
+                </li>
+            {% endif %}
         {% endfor %}
+
+        {% if object_list.number < object_list.paginator.num_pages|add:"-2" %}
+            {% if object_list.number < object_list.paginator.num_pages|add:"-3" %}
+                <li><span class="pagination-ellipsis">...</span></li>
+            {% endif %}
+            <li>
+                <a href="?page={{ object_list.paginator.num_pages }}{{ filter_params }}">
+                    {{ object_list.paginator.num_pages }}
+                </a>
+            </li>
+        {% endif %}
+
         {% if object_list.has_next %}
             <li class="pagination-link--next">
-                <a href="?page={{ object_list.next_page_number }}{{ filter_params }}">Volgende<svg width="12" height="18"><use href="#chevron-right" xlink:href="#chevron-right" width="12" height="18"></use></svg></a>
+                <a href="?page={{ object_list.next_page_number }}{{ filter_params }}">
+                    Volgende
+                    <svg width="12" height="18">
+                        <use href="#chevron-right" xlink:href="#chevron-right" width="12" height="18"></use>
+                    </svg>
+                </a>
             </li>
         {% endif %}
     </ul>
