--- a/app/web/cases/templates/cases/case_list_page_wonen.html
+++ b/app/web/cases/templates/cases/case_list_page_wonen.html
@@ -44,7 +44,7 @@
             </li>
             {% for tab in tabs %}
             <li class="tab{% if request.GET.f|stringformat:"s" == forloop.counter0|stringformat:"s" %} selected{% elif request.GET.f == None and forloop.counter0|stringformat:"s" == "0" %} selected{% endif %}">
-                <a href="./?f={{ forloop.counter0 }}{% if search != "" %}&search={{ search }}{% endif %}" role="button" class="button button--tertiary">{{ tab.title }} ({{ tab.queryset|length }})</a>
+                <a href="./?f={{ forloop.counter0 }}{% if search != "" %}&search={{ search|default:"" }}{% endif %}" role="button" class="button button--tertiary">{{ tab.title }} ({{ tab.queryset|length }})</a>
             </li>
             {% endfor%}
         </ul>
