--- a/app/web/cases/templates/cases/status/current_link.html
+++ b/app/web/cases/templates/cases/status/current_link.html
@@ -7,7 +7,7 @@
 {% else %}
     {{ object.status|status_verbose }}
 {% endif %}
- <small>({{ object.created|timezone:FRONTEND_TIMEZONE|date:"d-m-Y H:i" }})</small></a>
+ <small>({{ object.created|timezone:FRONTEND_TIMEZONE|date:DATE_FORMAT }})</small></a>
 {% else %}
     Nog niet ingediend
 {% endif %}
