--- a/app/static_src/sass/components/_footer.scss
+++ b/app/static_src/sass/components/_footer.scss
@@ -4,7 +4,7 @@ footer {
 
     .section-wrapper {
         &--top {
-            background: $neutral-grey4;
+            background: $primary-darkblue;
             color: $primary-white;
             padding: 1rem;
         }
@@ -19,7 +19,7 @@ footer {
             &--top {
                 padding: 1rem 0;
             }
-    
+
             &--bottom {
                 padding: .75rem 0;
             }
