--- a/app/static_src/sass/components/_elements.scss
+++ b/app/static_src/sass/components/_elements.scss
@@ -20,7 +20,7 @@
     li {
         margin-bottom: .5rem;
         text-align: right;
-        
+
         > * {
             color: $primary-darkblue;
             text-decoration: underline;
@@ -92,7 +92,7 @@
             width: 4em;
             height: 4em;
             box-shadow: inset 0 0 0 .5em;
-            transform: translateZ(0);  
+            transform: translateZ(0);
             z-index: 500;
             border-radius: 50%;
             transform: translateY(40vh);
@@ -102,7 +102,7 @@
         .show-loading & {
             top: 0;
             bottom: 0;
-            
+
 
             .js-spinner {
 
@@ -114,7 +114,7 @@
                     width: 2.2em;
                     height: 4.4em;
                     background: $primary-white;
-                    top: -0.2em;       
+                    top: -0.2em;
                 }
                 &:before {
                     border-radius: 4.4em 0 0 4.4em;
@@ -152,7 +152,7 @@
 
         }
     }
-    
+
 }
 .js-spinner-container {
     position: fixed;
@@ -172,7 +172,7 @@
         width: 4em;
         height: 4em;
         box-shadow: inset 0 0 0 .5em;
-        transform: translateZ(0);  
+        transform: translateZ(0);
         z-index: 500;
         border-radius: 50%;
         transform: translateY(40vh);
@@ -182,7 +182,7 @@
     .show-loading & {
         top: 0;
         bottom: 0;
-        
+
 
         .js-spinner {
 
@@ -194,7 +194,7 @@
                 width: 2.2em;
                 height: 4.4em;
                 background: $primary-white;
-                top: -0.2em;       
+                top: -0.2em;
             }
             &:before {
                 border-radius: 4.4em 0 0 4.4em;
@@ -231,4 +231,14 @@
         }
 
     }
+}
+.button-as-link {
+    background: none;
+    border: none;
+    padding: 0;
+    font: inherit;
+    text-align: left;
+    color: inherit;
+    text-decoration: underline;
+    cursor: pointer;
 }
