--- a/app/web/core/templates/data.html
+++ b/app/web/core/templates/data.html
@@ -14,7 +14,7 @@
             <h1>Analytics</h1>
         </div>
         <div class="flex-item u-clearfix">
-            
+
             <div class="screen-only">
                 <a href="#" id="download-excel-link" class="button button--secondary">
                     <svg class="u-margin-right" width="20" height="20" >
@@ -23,7 +23,7 @@
                     Download excel
                 </a>
             </div>
-            
+
         </div>
     </div>
 </section>
@@ -41,10 +41,10 @@
             </div>
         </dl>
     </div>
-    
+
 </section>
 
-                
+
                 <table id="excel-data" class="table--double-row table--condensed u-border-top-none">
                     <thead>
                         <tr>
@@ -72,23 +72,23 @@
                         </tr>
                         <tr class="u-border-top">
                             <th rowspan="2">Aanvraag Urgentie onder voorwaarden</th>
-                            <th class="u-font-weight-normal">ingediend</th>
+                            <th class="u-font-weight-normal">Ingediend</th>
                             <td>{{ zorginstelling_data.urgentie_ingediend|length }}</td>
                             <td>{{ zorginstelling_data.urgentie_ingediend_period|length }}</td>
                         </tr>
                         <tr class="u-border-top">
-                            <th class="u-font-weight-normal">goedgekeurd</th>
+                            <th class="u-font-weight-normal">Goedgekeurd</th>
                             <td>{{ zorginstelling_data.urgentie_goedgekeurd|length }}</td>
                             <td>{{ zorginstelling_data.urgentie_goedgekeurd_period|length }}</td>
                         </tr>
                         <tr class="u-border-top">
                             <th rowspan="2">Aanvraag Voordracht omklap</th>
-                            <th class="u-font-weight-normal">ingediend</th>
+                            <th class="u-font-weight-normal">Ingediend</th>
                             <td>{{ zorginstelling_data.omklap_ingediend|length }}</td>
                             <td>{{ zorginstelling_data.omklap_ingediend_period|length }}</td>
                         </tr>
                         <tr class="u-border-top">
-                            <th class="u-font-weight-normal">goedgekeurd</th>
+                            <th class="u-font-weight-normal">Goedgekeurd</th>
                             <td>{{ zorginstelling_data.omklap_goedgekeurd|length }}</td>
                             <td>{{ zorginstelling_data.omklap_goedgekeurd_period|length }}</td>
                         </tr>
