--- a/app/web/core/templates/home.html
+++ b/app/web/core/templates/home.html
@@ -7,7 +7,7 @@
             {% include 'users/login.html' %}
         {% endif %}
         <h1 class="h2 u-margin-top-3x">De Omslagroute</h1>
-        {% if request.user.is_authenticated and request.user|is_onbekent and NEW_USER_INTRO %}
+        {% if request.user.is_authenticated and request.user|is_onbekend and NEW_USER_INTRO %}
             {{ NEW_USER_INTRO|safe }}
         {% endif %}
 
