--- a/app/web/users/templates/users/user_list_page.html
+++ b/app/web/users/templates/users/user_list_page.html
@@ -65,7 +65,7 @@
             </td>
             <td>
                 <a href="{% url 'update_user' object.id %}">
-                    {{ object.user_type_value }}
+                    {{ object.user_type_names }}
                 </a>
             </td>
              <td>
