--- a/app/static_src/sass/basics/_04_helper-classes.scss
+++ b/app/static_src/sass/basics/_04_helper-classes.scss
@@ -48,7 +48,7 @@
     transition: all .5s;
 }
 
-.show-on-mobile { 
+.show-on-mobile {
     display: block;
     font-weight: 500;
     @media screen and (min-width: $tablets) {
@@ -327,6 +327,14 @@
     max-height: 12rem;
     overflow-y: auto;
     margin-bottom: 1rem;
+
+    li {
+        margin-bottom: .5rem;
+    }
+}
+
+.list-container {
+    margin-top: 0.5rem;
 
     li {
         margin-bottom: .5rem;
